--- a/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/bib/references.bib
+++ b/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/bib/references.bib
@@ -391,3 +391,27 @@ author = {Areej Alhogail and Afrah Alsabih}
   publisher={Springer},
   doi={10.1007/s13278-021-00776-6}
 }
+
+@article{demszky2020goemotions,
+  title={GoEmotions: A dataset of fine-grained emotions},
+  author={Demszky, Dorottya and Movshovitz-Attias, Dana and Ko, Jeongwoo and Cowen, Alan and Nemade, Gaurav and Ravi, Sujith},
+  journal={arXiv preprint arXiv:2005.00547},
+  year={2020},
+  doi={10.48550/arXiv.2005.00547}
+}
+
+@article{liu2019roberta,
+  title={Roberta: A robustly optimized bert pretraining approach},
+  author={Liu, Yinhan and Ott, Myle and Goyal, Naman and Du, Jingfei and Joshi, Mandar and Chen, Danqi and Levy, Omer and Lewis, Mike and Zettlemoyer, Luke and Stoyanov, Veselin},
+  journal={arXiv preprint arXiv:1907.11692},
+  year={2019},
+  doi={10.48550/arXiv.1907.11692}
+}
+
+@article{sanh2019distilbert,
+  title={DistilBERT, a distilled version of BERT: Smaller, faster, cheaper and lighter. arXiv 2019},
+  author={Sanh, Victor and Debut, Lysandre and Chaumond, Julien and Wolf, Thomas},
+  journal={arXiv preprint arXiv:1910.01108},
+  year={2019},
+  doi={10.48550/arXiv.1910.01108}
+}
