--- a/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/chapter1.tex
+++ b/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/chapter1.tex
@@ -51,7 +51,7 @@ The rapid growth of phishing attacks, as well as the problems they cause, indica
 One of the objectives is to gain an understanding of the techniques and methods commonly used by cyber attackers in phishing attacks.
 This study aims to examine AI-driven \ac{nlp} modules and assess their relevance and potential, for analyzing phishing emails.
 
-The primary goal is to create an AI-based solution that can accurately detect phishing emails by utilizing \ac{nlp} techniques and pattern recognition algorithms. An integrated system that not only identifies phishing emails but also automates response capabilities improving the efficiency and effectiveness of CSIRT teams.
+The primary goal is to create an AI-based solution that can accurately detect phishing emails by utilizing \ac{nlp} techniques. An integrated system that not only identifies phishing emails but also automates response capabilities improving the efficiency and effectiveness of CSIRT teams.
 
 The applicability of the framework will be evaluated, in a use case, using phishing emails as test data from the Cybersecurity Office known as GCS.
 
