--- a/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/chapter2.tex
+++ b/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/chapter2.tex
@@ -4,16 +4,14 @@
 % Técnicas convencionais de detetar phishing
 % Técnicas de ML para detetar phishing e aprofundar tecnicas de NLP
 
-This dissertation aims to develop a tool capable of improving the ability to analyze fraudulent emails. Given this problem, it is necessary to investigate the main \ac{ai} tools currently used in this context. This involves a comprehensive understanding of their capabilities and functionalities. Techniques and strategies for analyzing phishing emails, with an emphasis on \ac{ai} and machine/deep learning algorithms, and email data processing using \ac{nlp} modules, are also examined in further detail. These topics will be discussed in the sections below.
+This dissertation aims to develop a tool capable of improving the ability to analyze fraudulent emails. Given this problem, it is necessary to investigate the main \ac{ai} tools currently used in this context. This involves a comprehensive understanding of their capabilities and functionalities. Techniques and strategies for analyzing phishing emails, with an emphasis on \ac{ai} and machine/deep learning algorithms, and email data processing using \ac{nlp} modules, are also examined. These topics will be discussed in the sections below.
 
 To carry out this investigation it is necessary to have good sources of information. Several articles from scientific journals and conferences were researched, so it was necessary to create some criteria to condense all the important information.
-Articles with a recent date are one of the most important parameters to take into account when filtering them. The cybersecurity domain is dynamic, with attackers constantly developing new techniques and tactics. If only recent articles are prioritized, the search is guaranteed to reflect the current state of phishing attacks and the latest strategies to resolve the problem.
+Articles with a recent date are one of the most important parameters to take into account when filtering them. The cybersecurity domain is dynamic, with attackers constantly developing new techniques and tactics. If more recent articles are prioritized, the search is guaranteed to reflect the current state of phishing attacks and the latest strategies to resolve the problem.
 
-Another criterion was to restrict to cyber phishing attacks only. By focusing exclusively on phishing, we aim to ensure the methodologies and results presented are directly relevant to the specific challenges of phishing attacks.
+Another criterion was to restrict to cyber phishing attacks only. By focusing exclusively on phishing, we aim to ensure the methodologies and results presented are directly relevant to the specific challenges of phishing attacks. 
 
-Real datasets provide a genuine representation of the phishing scenario. Filtering articles that used real datasets ensures that the research was based on real cases and that the findings are applicable in real-world scenarios.
-
-For research to be valuable, it needs to demonstrate effectiveness in detecting phishing attempts. Prioritizing articles that demonstrate good results ensures that the methodologies presented are effective and can serve as a reference.
+For research to be valuable, it needs to demonstrate effectiveness in detecting phishing attempts, and prioritizing articles that demonstrate good results ensures that the methodologies presented are effective and can serve as a reference.
 
 \section{E-mail Feature Engineering}
 
@@ -63,8 +61,7 @@ Also, it is appropriate to address the \ac{pst} format, which is primarily utili
 The selection of email format is crucial for efficient data administration and analysis when creating a system for phishing email detection. The decision to choose the \ac{eml} format over \ac{mbox} is motivated by the particular advantages it provides, especially about the granularity, providing large information about an email. The standardized nature of \ac{eml} files ensures broad compatibility with a variety of email clients beyond Microsoft Outlook, which is not the case with the \ac{pst} format. For a phishing email detection system that would need to process data from several sources, this compatibility is essential.
 
 %estrutura de um email
-\ac{eml} files include all of the raw data that makes up an email, including the body content, headers, attachments and signatures. 
-
+\ac{eml} files include all of the raw data that makes up an email, including the headers and the body content.
 \input{figs_tex/c2/eml_contents.tex}
 
 The email headers contain details about the email servers that carried the email, thus serving as a digital trail of the email's journey from sender to recipient. This header is not just a single entity but a collection of various fields, each holding specific information.  Header fields are lines beginning with a field name, followed by a colon (":"), and followed by a field body, as specified in \ac{rfc} 5322~\cite{rfc5322}. The field name identifies the type of information, and the field body, following the colon, contains the specific details corresponding to the field name.
@@ -94,7 +91,7 @@ Depending on the email delivery service, custom headers can be included and are 
 
 As was discussed previously, the email content offers a wide range of information that can be crucial for detecting phishing emails. Besides the headers, the email body also contains equally pivotal information for detecting phishing attempts. While the email headers provide critical metadata, the body of an email often contains the substantive content that is essential for a more comprehensive analysis.
 
-Contents of the email body are described by its \textbf{Content-Type} field, which indicates the respective formats of the information. The structure of the \textbf{Content-Type} consists of a \textbf{type} and a \textbf{subtype}, two strings, separated by a ‘/’, where no space is allowed between them. The type represents the category and can be a discrete or a multipart type, and the subtype is specific to each type. Discrete types are types that represent a single file, such as a single text or music file, or a single video. A document that is divided into several separate sections, each of which could have its own unique MIME type, is represented by a multipart type.
+Contents of the email body are described by its "Content-Type" field, which indicates the respective formats of the information. The structure of the "Content-Type" consists of a "type" and a "subtype", two strings, separated by a ‘/’, where no space is allowed between them. The type represents the category and can be a discrete or a multipart type, and the subtype is specific to each type. Discrete types are types that represent a single file, such as a single text or music file, or a single video. A document that is divided into several separate sections, each of which could have its own unique MIME type, is represented by a multipart type.
 
 The list of discrete types is long but some important content-types are mentioned below:
 
@@ -107,7 +104,7 @@ The list of discrete types is long but some important content-types are mentione
 
 \input{figs_tex/c2/eml_body.tex}
 
-Expanding the in-depth analysis of the email body, it is equally important to delve into the structure and representation of attachments in \ac{eml} files. The attachments contained in the email file are encapsulated within the message body, marked by their Content-Type (\textbf{A}) and Content-Disposition (\textbf{B}). The \textbf{A} header specifies the media type of the file, which is crucial in understanding the nature of the attachment. The following example in Figure \ref{fig:c2:attachement} indicates that the attachment is a PDF file, with a given name ("matter.pdf"). Also, the \textbf{B} header plays a critical role in how the attachment is processed by the email client, suggesting that the file should be treated as an attachment and not as an inline element. The 'filename' parameter provides the suggested name for the file when saved. Finally, the Content-Transfer-Encoding (\textbf{C}) header indicates that the file is encoded in base64, which is a common encoding technique that ensures the binary data of the attachment is transmitted over the network in a text format.
+Expanding the in-depth analysis of the email body, it is equally important to delve into the structure and representation of attachments in \ac{eml} files. The attachments contained in the email file are encapsulated within the message body, marked by their "Content-Type" (\textbf{A}) and "Content-Disposition" (\textbf{B}). The \textbf{A} header specifies the media type of the file, which is crucial in understanding the nature of the attachment. The following example in Figure \ref{fig:c2:attachement} indicates that the attachment is a PDF file, with a given name ("matter.pdf"). Also, the \textbf{B} header plays a critical role in how the attachment is processed by the email client, suggesting that the file should be treated as an attachment and not as an inline element. The 'filename' parameter provides the suggested name for the file when saved. Finally, the "Content-Transfer-Encoding" (\textbf{C}) header indicates that the file is encoded in base64, which is a common encoding technique that ensures the binary data of the attachment is transmitted over the network in a text format.
 
 \input{figs_tex/c2/attachment.tex}
 
@@ -124,12 +121,12 @@ Each EML file has a standard format, which allows it to load by specified rules.
 Email metadata plays a critical role in the field of email phishing detection. All the fields explained before, including headers and other structural components, can offer information to determine the authenticity of an email. This metadata, which users frequently ignore, includes details such as the sender's address, routing information, timestamps, and more, giving information to help comprehend an email's origin and path.
 
 Email spoofing is a very common type of phishing technique. It is a threat that involves sending email messages with fake information on email headers. Because a spoofed email and regular mail are similar in many aspects, email spoofing takes advantage of these similarities. Attackers can customize the information in several fields such as "Return-Path", "Reply-To", "From", "Subject", "Date", and "To".
-The "Return Path" is where bounce messages go if the email fails to deliver. In legitimate emails, the "From" and "Return-Path" are typically consistent, representing the same source. However, in the case of email spoofing, there is often a discrepancy between these two fields. Scammers frequently manipulate the "From" address to appear as a trustworthy source, although they forget to modify the "Return-Path".
+The "Return Path" is where bounce messages go if the email fails to deliver. In legitimate emails, the "From" and "Return-Path" are typically consistent, representing the same source. However, in the case of email spoofing, there is often a discrepancy between these two fields. Scammers frequently manipulate the "From" address to appear as a trustworthy source, although they forget to modify the "Return-Path".\\
 One of the main warning signs is an inconsistency between the "Reply-To" and "From" addresses. This disparity suggests the sender might be attempting to hide their true identity, which is a common phishing attempt approach. Additionally, if the “From” address does not align with the entity the email claims to represent, it further raises even more questions about the email's credibility. 
 Another important detail is the nature of the "Subject" line. Phishing emails frequently have subject lines that are concerning, urgent, or too appealing in an attempt to get the receiver to act immediately without closely examining the legitimacy of the email. 
 The "Date" field also needs to be taken into consideration. Attackers might use data that are not logical, including dates in the future or the past. Also, if the “To” address does not specifically name you, it can be indicative of phishing. Phishing emails often lack specific identification of the recipient, suggesting a broad targeting strategy known as mass mailings.
 
-Another technical aspect of the email's metadata that can provide important information is the \ac{spf}. A "Fail" or "SoftFail" status from the \ac{spf} check, or a lack of \ac{spf} validation, raises serious questions about the legitimacy of the email. Also, another important point is that the IP address must line up with the sender's email service. If this does not happen, it suggests that the email may have been sent from an unauthorized or suspicious server. The "Received" fields can also provide crucial information, tracing the email's path across the internet. Unknown servers along this path, especially at the beginning or end, suggest that the email routing process may be compromised, raising the possibility of a phishing attempt.\\
+Another technical aspect of the email's metadata that can provide important information is the \ac{spf}. A "Fail" or "SoftFail" status from the \ac{spf} check, or a lack of \ac{spf} validation, raises serious questions about the legitimacy of the email. Also, another important point is that the IP address must line up with the sender's email service. If this does not happen, it suggests that the email may have been sent from an unauthorized or suspicious server. The "Received" fields can also provide crucial information, tracing the email's path across the internet. Unknown servers along this path, especially at the beginning or end, suggest that the email routing process may be compromised, raising the possibility of a phishing attempt.
 
 % falar sobre features utilizadas em outros trabalhos
 
@@ -146,6 +143,8 @@ Phishing emails may contain attachments with content-types that are commonly ass
 In the~\citet{dewan2014analyzing} study, a significant portion is devoted to analyzing the attachment names and types in spear phishing emails. The study highlights a clear distinction between the attachment names used in spear phishing and general spam or phishing emails. Spear phishing emails tend to have attachment names that appear more realistic and genuine, as opposed to the more irrelevant and lengthy names found in general spam or phishing emails. This difference in naming conventions indicates that spear phishing attacks are crafted with more effort to make them appear legitimate and trustworthy, thereby increasing the likelihood of the recipient opening the attachment. Additionally, the paper discusses the types of file formats commonly used in these emails. Both spear phishing and general spam/phishing emails prominently feature executable (.exe, .bat, .com) and compressed (.rar, .zip, .7z) file types, along with common document formats like Microsoft Word, Excel, PowerPoint, and PDF files. The research explores the presence of attachments in the email body, indicating whether an email contains an attachment, and this feature, among others, is used to analyze and classify emails in their dataset. Although they do not use the attachment name and type as features for their classification, they can be used to enhance the detection of phishing emails.
 
 The proposal presented by~\citet{li2020lstm} delves into the complexities of detecting phishing emails, particularly focusing on the role of email attachments in these malicious activities. In addressing this challenge, they propose an email feature extraction algorithm that focuses on various aspects of emails, including the names and suffixes of attachments. In the end, they got high accuracy results, which demonstrates the effectiveness of their approach, especially in the context of detecting phishing emails with attachments.
+
+In the upcoming section of this thesis, the analysis of email body content will be discussed.
 
 \begin{comment}
 Therefore, it is crucial to not only inspect the declared \textbf{Content-Type} but also to perform a deeper analysis of the attachment itself. 
@@ -184,7 +183,7 @@ Feature extraction is another important step in \ac{nlp} that involves the extra
 After this, numerical features extracted by the previous techniques can be fed into \ac{ml} models. Depending on the task, different models can be used, such as classification, clustering, and regression models.
 
 % mostrar aplicações de nlp com machine learning
-\citet{Vazhayil201869} presents an insightful application of \ac{nlp} methods in conjunction with \ac{ml} models for phishing email detection. This study uses \ac{tdm} for the non-sequential representation of the corpus, followed by \ac{svd} and \ac{nmf} to extract important features. These extracted features were then used to train various \ac{ml} algorithms, including \ac{dt}, \ac{knn}, \ac{nb}, \ac{rf}, \ac{svm}, and \ac{lr}. In the conclusion, they highlighted the effectiveness of this approach in distinguishing phishing emails from legitimate ones. However, the paper also acknowledges a limitation: the reliance on feature selection, which requires domain knowledge. To address this, future work could incorporate \ac{dl} models that can learn more complex patterns directly from the raw data, potentially improving efficacy. \citet{Gutierrez2018988} mentioned that the most common defensive approaches frequently display a lack of adaptability. This is primarily because of its basis in rigid frameworks like regular expressions that recognize specific text patterns. A major flaw with \ac{nlp} developed on \ac{ml} is their reliance on surface-level text analysis rather than exploring deeper semantics. This means that if different synonyms of words are chosen or the sentence construction is changed, it is difficult for \ac{nlp} built on \ac{ml} to analyze these changes.
+\citet{Vazhayil201869} presents an insightful application of \ac{nlp} methods in conjunction with \ac{ml} models for phishing email detection. This study uses \ac{tdm} for the non-sequential representation of the corpus, followed by \ac{svd} and \ac{nmf} to extract important features. These extracted features were then used to train various \ac{ml} algorithms, including \ac{dt}, \ac{knn}, \ac{nb}, \ac{rf}, \ac{svm}, and \ac{lr}. In the conclusion, they highlighted the effectiveness of this approach in distinguishing phishing emails from legitimate ones. However, the paper also acknowledges a limitation: the reliance on feature selection, which requires domain knowledge. To address this, future work could incorporate \ac{dl} models that can learn more complex patterns directly from the raw data, potentially improving efficacy. \citet{Gutierrez2018988} mentioned these types of defensive approaches frequently display a lack of adaptability. A major flaw with \ac{nlp} developed on \ac{ml} is their reliance on surface-level text analysis rather than exploring deeper semantics. This means that if different synonyms of words are chosen or the sentence construction is changed, it is difficult for \ac{nlp} built on \ac{ml} to analyze these changes.
 
 % mostrar aplicações de nlp com deep learning
 Advancements in this area have led to the development of more sophisticated techniques. Unlike traditional \ac{ml} models, \ac{dl} models can automatically detect and learn features from raw text, allowing them to capture complex relationships between words and phrases in a language and to generalize to new and unseen examples. Some examples of \ac{dl} models that can be used in \ac{nlp} are \ac{rnn}, \ac{cnn} and transformer models. \ac{rnn} is a type of neural network that can process sequential data, such as text, by using a hidden state to store information about previous inputs. \ac{cnn}, typically known for image processing, have also been effectively repurposed for \ac{nlp} tasks. Moreover, the emergence of Transformer models marks a significant leap. These models excel in understanding the context of language, processing each word concerning all other words in a sentence, and using self-attention mechanisms to capture the global relationships in a sentence.
@@ -225,10 +224,17 @@ The THEMIS model, combining multilevel embedding with the improved \ac{rcnn}-Att
 
 \citet{atawneh2023phishing} proposal explores the use of \ac{dl} techniques, including \ac{cnn}, \ac{lstm} networks, \ac{rnn}, and \ac{bert}, for detecting email phishing attacks. The proposed model in the study involved collecting, preparing, and utilizing a dataset for training and testing the previously mentioned \ac{dl} models for phishing detection. This included steps like dataset acquisition, data preparation, feature extraction, and model training and testing. The research involved removing HTML tags, numbers, punctuations, stop words, and infrequent words from the email datasets. Stemming was also applied to reduce words to their base form. These preprocessing steps were essential for reducing noise in the data and enabling effective learning by the \ac{dl} models. All these models achieved high accuracy, with the best performance observed using \ac{bert} and \ac{lstm}, reaching an accuracy of 99.61\%.
 
-Table~\ref{tbl:c2:comparison_table} summarizes the proposed works discussed in this section related to phishing detection. The literature review revealed several machine learning and deep learning techniques that can be used to detect phishing emails. It also evaluated the performance of various techniques in terms of accuracy.
+Table~\ref{tbl:c2:comparison_table} summarizes the proposed works discussed in this section related to phishing detection. The literature review revealed several machine learning and deep learning techniques that can be used to detect phishing emails. It also evaluated the performance of various techniques in terms of accuracy. Complementing this analysis, the subsequent table, Table~\ref{tbl:c2:datasets_table}, offers an in-depth overview of the datasets employed in these studies.
 
-% alterar a tabela para os papers certos
 \input{figs_tex/c2/comparison_table.tex}
+\input{figs_tex/c2/datasets_table.tex}
+\input{figs_tex/c2/comparison_table_2.tex}
+
+\newpage
+
+Table \ref{tbl:c2:comparison_table_2} presents a summary of recent works by various authors, the datasets employed, and the corresponding evaluation methods utilized to assess the performance of their proposed classifiers. A common evaluation method observed is the train-test split, with proportions ranging from 80\%/20\% to 70\%/30\%. This method provides a straightforward approach to assess the model on unseen data, ensuring that the classifier can effectively detect phishing attempts beyond the data it was trained on. 
+
+K-fold cross-validation, where K varies from 3 to 10, is another prevalent evaluation technique noted in the table. Cross-validation is a robust statistical method that maximizes the use of available data by rotating the train-test sets, thereby offering a comprehensive assessment of the classifier's performance. It suggests a consistency in the methodology that enables a fair comparison across different studies, as it mitigates the impact of any potential biases inherent in a single train-test split.
 
 \section{Sentiment analysis}
 
@@ -256,7 +262,7 @@ specific emotions 'Anger', 'Disgust', 'Fear', 'Joy', 'Sadness', 'Surprise' and '
 
 A specific example is the Sentiment Analysis Module detailed in the~\citet{10085351} study, where this module captures the emotions or sentiments expressed in emails. It employs the \ac{nltk}, an open-source Python library, to analyze the text based on common and repetitive sentiment words included in the training set. Determining sentence polarity is an important part of this module since it helps to comprehend the emotional tone that an email provides. The system pre-determines the polarity of specific polar words to interpret the sentiment accurately. 
 
-
+\input{figs_tex/c2/emotions_table.tex}
 
 \section{Insights}
 
@@ -264,9 +270,13 @@ The analysis of phishing email detection strategies and tactics covered in this 
 
 One notable development in the phishing detection field is the role of \ac{ai}, particularly \ac{nlp} and \ac{ml}/\ac{dl} approaches. \ac{nlp}'s capacity to analyze and evaluate email language is very helpful in identifying phishing emails, as they frequently have linguistic indicators that set them apart from legitimate correspondence. Although \ac{ml} models have been used to detect phishing emails, they are limited in their ability to learn complex patterns from raw data. This is where \ac{dl} models come in, as they can learn more complex patterns directly from the raw data, potentially improving efficacy.
 
+% However, it's crucial to evaluate these models using a range of performance metrics beyond mere accuracy. Metrics such as precision, recall, and F1 scores offer a more rounded view of a model's effectiveness, especially in differentiating between phishing and non-phishing emails. The false positive rate is particularly critical in practical settings, as high rates can lead to user dissatisfaction and reduced trust in the system.
+
+The quality and diversity of datasets used in training these models also demand attention. A model's performance is only as good as the data it's trained on. Datasets that lack diversity or representativeness can lead to models that are ineffective in real-world scenarios, where phishing tactics are continually evolving. This is particularly pertinent given the dynamic nature of phishing, where detection systems must not only be technologically advanced but also strategically adaptable to counteract new and evolving threats.
+
 Based on the review of the state-of-the-art in phishing email detection and sentiment analysis, it is evident that despite notable progress in detecting and mitigating phishing attacks via machine learning and deep learning techniques, there is still a notable gap in integrating sentiment analysis into phishing detection systems. This process is not merely about polarity detection (classifying text as positive, negative, or neutral) but extends to identifying specific emotions like happiness, frustration, anger, and sadness. Existing phishing detection systems do not perform this type of analysis, which is crucial in understanding the psychological strategies used in the attacks.
 
-In addition, the dynamic nature of phishing techniques necessitates continual learning and adaptation in detection systems. Phishing tactics evolve regularly, therefore detection systems need to be able to pick up on these changes and adjust accordingly. This adaptive approach is not just a technological improvement but a strategic necessity in the ongoing battle against these cyber threats. 
+In addition, the dynamic nature of phishing techniques needs continual learning and adaptation in detection systems. Phishing tactics evolve regularly, therefore detection systems need to be able to pick up on these changes and adjust accordingly. This adaptive approach is not just a technological improvement but a strategic necessity in the ongoing battle against these cyber threats. 
 
 % parte de nlp que diz que ML com NLP tem limitações
 
