--- a/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/cover.tex
+++ b/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/cover.tex
@@ -100,7 +100,7 @@
 
 %%% Edit thesis title in Portuguese
 %% Thesis Mandatory Title in Portuguese
-\TitlePT{Utilizar Inteligência Artificial para melhorar a capacidade de análise de e-mails fraudulentos}
+\TitlePT{Integrar Inteligência Artificial para melhorar a capacidade de análise de e-mails fraudulentos}
 
 %%% OPTIONAL: you can write your thesis title in
 %%%  other languages. You can repeat the following
@@ -179,8 +179,8 @@ the problem in a way that will allow a solution}{Bertrand Russell}
 %%%  declaration.
 %%% Don't remove the \selectlanguage statement or you will end with incorrect hyphenation
 %% Mandatory Keywords and Abstract in Portuguese
-\Abstract{Palavras Chave}{texto livro, arquitetura, história, construção, materiais de construção, saber tradicional.}
-         {Resumo}{\selectlanguage{portuguese}Um resumo é um pequeno apanhado de um trabalho mais longo (como uma tese, dissertação ou trabalho de pesquisa). O resumo relata de forma concisa os objetivos e resultados da sua pesquisa, para que os leitores saibam exatamente o que se aborda no seu documento.\\Embora a estrutura possa variar um pouco dependendo da sua área de estudo, o seu resumo deve descrever o propósito do seu trabalho, os métodos que você usou e as conclusões a que chegou.\\Uma maneira comum de estruturar um resumo é usar a estrutura IMRaD. Isso significa: \begin{itemize} \item Introdução \item Métodos \item Resultados \item Discussão \end{itemize} Veja mais pormenores aqui:\\\texttt{https://www.scribbr.com/dissertation/abstract/}}
+\Abstract{Palavras Chave}{e-mail, deteção de phishing, processamento de linguagem natural, análise de sentimento, inteligência artificial.}
+         {Resumo}{\selectlanguage{portuguese}A constante evolução e frequência dos ataques de phishing por e-mail representam um desafio significativo para a cibersegurança. Esta tese explora a integração da Inteligência Artificial (AI), especificamente técnicas de Processamento de Linguagem Natural (NLP) e Aprendizado de Máquina (ML)/Aprendizado Profundo (DL), para melhorar a detecção e análise de e-mails de phishing. Utilizando módulos de NLP impulsionados por AI, este estudo tem como objetivo criar uma solução em AI que não apenas detecta com precisão e-mails de phishing, mas também automatiza as capacidades de resposta, melhorando assim a eficiência e eficácia das equipes de CSIRT. Em última análise, esta pesquisa contribui para o campo da cibersegurança, fornecendo um quadro abrangente e alimentado por AI para uma detecção e resposta a e-mails de phishing mais robusta e adaptável.}
 
 %%% OPTIONAL: you can write the keywords and
 %%%  abstract in other languages. You can repeat
@@ -189,8 +189,8 @@ the problem in a way that will allow a solution}{Bertrand Russell}
 %%% Don't remove the \selectlanguage statement or you will end with incorrect hyphenation.
 %%% You can modify the language to any other supported by Latex
 %% Optional Keywords and Abstract in additional languages.
-\Abstract{Keywords}{textbook, architecture, history, construction, construction materials, traditional knowledge.}
-         {Abstract}{\selectlanguage{english}An abstract is a short summary of a longer work (such as a thesis, dissertation or research paper).\\The abstract concisely reports the aims and outcomes of your research, so that readers know exactly what your paper is about.\\Although the structure may vary slightly depending on your discipline, your abstract should describe the purpose of your work, the methods you’ve used, and the conclusions you’ve drawn.\\One common way to structure your abstract is to use the IMRaD structure. This stands for: \begin{itemize} \item Introduction \item Methods \item Results \item Discussion \end{itemize} Check for more details here:\\\texttt{https://www.scribbr.com/dissertation/abstract/}}
+\Abstract{Keywords}{e-mail, phishing detection, natural language processing, sentiment analysis, artificial intelligence.}
+         {Abstract}{\selectlanguage{english}The increasing sophistication and frequency of email phishing attacks pose a significant challenge to cybersecurity. This thesis explores the integration of Artificial Intelligence (AI), specifically Natural Language Processing (NLP) and Machine Learning (ML)/Deep Learning (DL) techniques, to enhance the detection and analysis of phishing emails. By using AI-driven NLP modules, this study aims to create an AI-based solution that not only accurately detects phishing emails but also automates response capabilities, thereby enhancing the efficiency and effectiveness of CSIRT teams. Ultimately, this research contributes to the cybersecurity field by providing a comprehensive, AI-powered framework for more robust and adaptive phishing email detection and response.}
 
 %%% Edit the Jury President information.
 %% First Member will be the President of the Jury
